--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
-    "compilerOptions": {
-        // 编译选项
-        "target": "es2016", // 配置编译目标代码的版本标准
-        "module": "commonjs", // 配置编译目标使用的模块化标准
-        "lib": ["es2016"],
-        "outDir": "./dist", // 指定编译输出的目录,
-        "strictNullChecks": true
-    },
-    "include": ["./src"]
-    // "files": ["./src/index.ts"] // 编译指定文件及其依赖
+  "compilerOptions": {
+    // 编译选项
+    "target": "es2016", // 配置编译目标代码的版本标准
+    "module": "commonjs", // 配置编译目标使用的模块化标准
+    "lib": ["es2016"],
+    "outDir": "./dist", // 指定编译输出的目录,
+    "strictNullChecks": true // 更加严格的空类型的检查
+  },
+  "include": ["./src"]
+  // "files": ["./src/index.ts"] // 编译指定文件及其依赖
 }
